Fix margins on mobile

--- a/components/Codeblock.module.css
+++ b/components/Codeblock.module.css
@@ -1,5 +1,6 @@
 .codeblock {
   font-family: monospace;
   overflow: auto;
+  max-width: 100%;
   padding: 0.5em 0;
 }
