--- a/styles/root.css
+++ b/styles/root.css
@@ -51,3 +51,7 @@ h6 {
 section {
   margin-bottom: 2em;
 }
+
+* {
+  box-sizing: border-box;
+}
